# cctvql

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  hacs.json  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: adapter_request.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker.yml  mobile-build.yml  mobile-ota.yml  pr-checks.yml  release.yml
blueprints/automation/: cctvql_motion_alert.yaml  cctvql_ptz_on_motion.yaml  cctvql_scheduled_report.yaml
cctvql/: __init__.py  __main__.py  _bootstrap.py
cctvql/adapters/: __init__.py  base.py  dahua.py  demo.py  frigate.py  hikvision.py  milestone.py  onvif.py  onvif_discovery.py  scrypted.py  synology.py
cctvql/core/: __init__.py  alerts.py  anomaly.py  auth.py  database.py  face_registry.py  health_monitor.py  multi_query.py  nlp_engine.py  query_router.py  schema.py  session_store.py  user_store.py  vision.py
cctvql/interfaces/: __init__.py  cli.py  rest_api.py  voice.py
cctvql/llm/: __init__.py  anthropic_backend.py  base.py  ollama_backend.py  openai_backend.py
cctvql/notifications/: __init__.py  base.py  email_notifier.py  ntfy.py  push.py  registry.py  slack.py  telegram.py  webhook.py
config/: example.yaml
custom_components/cctvql/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  strings.json
deploy/frigate-sidecar/: docker-compose.yml
docs/: adapters.md  api.md  configuration.md  docker.md  home-assistant.md  llm-backends.md  notifications.md  persistence.md  troubleshooting.md
integrations/ioBroker.cctvql/: io-package.json  package.json
integrations/n8n-nodes-cctvql/: .gitignore  .npmignore  (+3 more)
mobile/: App.tsx  app.json  eas.json  package.json  tsconfig.json
scripts/: setup-branch-protection.sh
tests/: conftest.py  test_alerts.py  test_anomaly.py  test_bootstrap.py  test_dahua_adapter.py  test_database.py  test_demo_adapter.py  test_ha_integration.py  test_hikvision_adapter.py  test_llm_backends.py  test_milestone_adapter.py  test_multi_query.py  test_multi_tenant.py  test_nlp_engine.py  test_onvif_discovery.py  test_query_router.py  test_rest_api.py  test_schema.py  test_scrypted_adapter.py  test_synology_adapter.py  test_timeline.py  test_vision.py  test_voice.py
(+49 files in other folders)
